<resources>
    <string name="app_name">Lms Baskoi</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo2">Logo2</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="cliquez_pour_continuer">Cliquez pour continuer</string>
    <string name="aircraft_maintenance_company">Aircraft Maintenance Company</string>
    <string name="docuweb">Docuweb</string>
</resources>>