<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Estia1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aero"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="79dp"
        android:layout_marginTop="84dp"
        android:background="#70F4F0F0"
        android:text="@string/docuweb"
        android:textAlignment="center"
        android:textColor="#78909C"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="306dp"
        android:layout_height="138dp"
        android:layout_marginBottom="136dp"
        android:background="#FAF6F6"
        android:text="@string/aircraft_maintenance_company"
        android:textAlignment="center"
        android:textColor="#320312"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Clique"
        android:layout_width="157dp"
        android:layout_height="55dp"
        android:background="#FAF7F7"
        android:text="@string/cliquez_pour_continuer"
        android:textAlignment="center"
        android:textColor="#490303"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>